mf-swhurl-website-oauth2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  template:
    spec:
      containers:
      - args:
        - --provider=github
        - --email-domain=swhurl.com
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        # Register a new application
        # https://github.com/settings/applications/new
        image: docker.io/colemickens/oauth2_proxy:latest
        imagePullPolicy: Always
        name: mf-swhurl-stage-oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
